# gpt-realtime-starter

./: README.md  connect.py  connect_and_record.py  connect_and_use_a_tool.py  connect_and_use_a_tool_with_approval.py  connect_record_and_playback.py  pyproject.toml
